# audio-transcriber

./: .env.example  .gitignore  LICENSE  README.md  env_utils.py  pyproject.toml
src/audio_transcriber/: __init__.py  config.py  gui.py  transcriber.py
