[project]
name = "audio-transcriber"
version = "0.1.0"
description = "Tkinter-based Persian audio transcriber using Avalai API"
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "requests>=2.31.0",
    "python-dotenv>=1.0.1",
    "packaging>=24.0",
    "tqdm>=4.66.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/audio_transcriber"]

[dependency-groups]
dev = []